tests/ui/parser/range_inclusive.stderr
error[E0586]: inclusive range with no end
  --> $DIR/range_inclusive.rs:5:15
   |
LL |     for _ in 1..= {}
   |               ^^^
   |
   = note: inclusive ranges must be bounded at the end (`..=b` or `a..=b`)
help: use `..` instead
   |
LL -     for _ in 1..= {}
LL +     for _ in 1.. {}
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0586`.
